examples/test/testpolicy16777.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16777
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key4: value41
      key42: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value15
      podSelector:
        matchLabels:
          key30: value42
          key8: value22
